crates/manifest/tests/ui/invalid/bad_variable_name.err
TOML parse error at line 7, column 1
  |
7 | "bad+name" = { required = true }
  | ^^^^^^^^^^
'_'-separated words may only contain alphanumeric ASCII; got '+'
